syntax = "proto3";

option csharp_namespace = "Shared.Grpc.Models";

package car_service;


message VehicleImage {
    string filename = 1;
    string content_type = 2;
    bytes data = 3;
}